maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:43: error: ';' expected but 'else' found.
	else{
        ^